Fix invalid dist error with TOP closes #725